--- a/constitution.tex
+++ b/constitution.tex
@@ -49,12 +49,12 @@ The election will be done by secret ballot by attendees who have attended at lea
 Is the official spokesperson of the organization and provides directions for all components of the organization in a manner consistent with the organization’s constitution and policies.
 \subsection{Vice President}
 Oversees the organization’s finances and is in charge of developing and enhancing the delivery of member services.
-\subsection{Secretary}
+\subsection{Treasurer}
 Oversees the events organized by the group for the benefit of members and the campus community.
 
 \section{ARTICLE VI - EXECUTIVE COUNCIL}
 \subsection{Members of the Executive Council}
-The Executive Council will consist of the President, Vice President, and Secretary.
+The Executive Council will consist of the President, Vice President, and Treasurer.
 
 \subsection{Duties of the Executive Council}
 \begin{itemize}
@@ -82,7 +82,7 @@ There must be a meeting at least once a month held at Louisiana State University
 \subsection{Quorum Requirement}
 There must be a quorum (a quorum is 50 percent plus 1 of the active or dues-paying membership) present in order to take care of financial action.
 \subsection{Financial Minutes}
-Minutes must be kept of all financial action with the club’s Secretary.
+Minutes must be kept of all financial action with the club’s Treasurer.
 
 \section{ARTICLE IX - RESPONSIBILITIES}
 \subsection{Financial Responsibility}
