--- a/constitution.tex
+++ b/constitution.tex
@@ -48,9 +48,9 @@ The election will be done by secret ballot by attendees who have attended at lea
 \subsection{President}
 Is the official spokesperson of the organization and provides directions for all components of the organization in a manner consistent with the organization’s constitution and policies.
 \subsection{Vice President}
-Oversees the organization’s finances and is in charge of developing and enhancing the delivery of member services.
+Oversees events organized by the group and is in charge of developing and enhancing the delivery of member services.
 \subsection{Treasurer}
-Oversees the events organized by the group for the benefit of members and the campus community.
+Oversees the organization’s finances for the benefit of members and the campus community.
 
 \section{ARTICLE VI - EXECUTIVE COUNCIL}
 \subsection{Members of the Executive Council}
