added Acknowledgment of LSU Campus Life Policies

--- a/constitution.tex
+++ b/constitution.tex
@@ -23,19 +23,19 @@ The name of this club shall be quantumBR.
 \subsection{Mission}
 We are an organization dedicated to fostering and sharing knowledge to educate our peers and make quantum computing accessible to everyone. quantumBR will host information sessions, lectures, hands-on workshops, and student-community collaborative projects.
 \subsection{Operation}
-This club will operate as an independent entity working within the Louisiana State University subject to the values and policies of the university.
+This club will operate as an independent entity working within the Louisiana State University subject to the values and policies of the university. This club will also cooperate with LSU to support the improvement of education while not interfering with LSU administration. This club will abide by all University policies and laws.
 \subsection{Scope}
-The scope of this club is not limited to Louisiana State University and it is open to and intended the impact the whole of Louisiana with an emphasis on the greater BR area.
+The scope of this club is not limited to Louisiana State University and it is open to and intended the impact the whole of Louisiana with an emphasis on the greater BR area. This club will be non-commercial and the name quantumBR or the names of any members in an official capacity will not be used in any commercial means.
 \subsection{Goals}
 quantumBR will enhance the educational, recreational, social, or cultural environment of Louisiana State University by being inclusive to all students, by transferring knowledge to students, by forging closer relationships between students and local businesses in the community, and by promoting diversity in the tech community.
 
 \section{ARTICLE III - MEMBERSHIP}
 \subsection{Definition of Membership}
-Membership will carry no dues and no distinction shall be made between frequent attendees and actual members with exception that members must be LSU students and be in good academic standing.
+Membership will carry no dues and no distinction shall be made between frequent attendees and actual members with exception that members must be LSU students and be in good academic standing. Associate membership is available to LSU faculty/staff and are non-voting members. Any LSU student/faculty/staff who subscribes to the purpose and policies of quantumBR may become a member, subject only to compliance with this constitution.
 
 \section{ARTICLE IV - QUALIFICATION AND ELECTION OF OFFICERS}
 \subsection{Qualification}
-Club officers must be currently enrolled, have a minimum of a 3.0 cumulative Grade Point Average (GPA), have a current LSU tiger card, and must not be on academic or social probation.
+Club officers must be currently enrolled full-time, have a minimum of a 3.0 cumulative Grade Point Average (GPA), have a current LSU tiger card, and must not be on academic/social probation or deferred suspension. Graduating seniors who are not full-time may still hold office if they are scheduled to graduate at the end of the semester.
 \subsection{Election Date}
 The election of the Club Officers shall be held during the Ninth (9th) week of the Spring Semester.
 \subsection{Voting Procedure}
@@ -70,6 +70,8 @@ OF OFFICERS AND MEMBERS}
 All elected officers and club members may be subjected to impeachment and removal by a two-thirds majority vote of the total membership.
 \subsection{Grounds for Impeachment}
 Grounds for impeachment are negligence and any form of misconduct which is damaging to the club.  An officer/member may be impeached/removed only under the following conditions: there must be a quorum present during impeachment/removal; two-thirds of the membership must vote; prior to impeachment/removal, there must be one week's notice of intent publicized.
+\subsection{Impeachment Appeal}
+Impeachment appeals are handled by quantumBR's advisor's sole discretion.
 \subsection{Vacancy}
 Any officer vacancies shall be filled by an election held within two weeks.
 
@@ -87,6 +89,8 @@ Minutes must be kept of all financial action with the club’s Treasurer.
 \section{ARTICLE IX - RESPONSIBILITIES}
 \subsection{Financial Responsibility}
 This club accepts full financial responsibility for all activities that bear its name as official sponsor, and will adhere to college regulations.  All publicity for an event must bear the name of the sponsoring club.
+\subsection{Member Responsibility}
+Members of the organization may not make commitments to other organizations or agencies that bind the organization according to Article IV Section 4 of LSU Campus Life Policies.
 
 \section{ARTICLE X - RIGHT TO ACT}
 \subsection{Right to Incur Club Debt}
@@ -94,7 +98,7 @@ Any club officer, club member does not have the right to incur any debt or becom
 
 \section{ARTICLE XI – AMENDMENTS TO CONSTITUTION}
 \subsection{Two-Thirds Requirement}
-Any amendment change requires a two-thirds vote at a general club meeting by attendees who have been present for 4 or more meetings.
+Any amendment change requires a two-thirds vote at a general club meeting by attendees who have been present for 4 or more meetings. The change should be provided at the previous meeting and all changes shall be subject to approval of Campus Life.
 
 %\section{}
 %\subsection{}
